Naming Vertex Color attribute as "snout, Snout" causes shader error. #83625

Closed
opened 2020-12-10 12:41:48 +01:00 by Teemu · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0
Also seems to be broken in 2.91.0
Worked:

Short description of error
Naming vertex color attribute to word "Snout" or with a little variance of capital letters causes shader not to compile. If the attribute is named in full capitals such as "SNOUT" the shader can compile.
image.png

vertexColorAttributeNamingIssue.blend
Exact steps for others to reproduce the error

  1. Use the default cube.
  2. Create a new vertex color attribute for it.
  3. Add some colors through vertex painting.
  4. Name the Attribute as "Snout" or snout.
  5. Create a material (use emissive) and plug the created vertex color attribute into the color input.
  6. Shader won't compile
  7. Rename vertex color "Snout" attribute to something else.
  8. Update material attribute input name to match the renamed one.
  9. Shader compiles again.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` Also seems to be broken in 2.91.0 Worked: **Short description of error** Naming vertex color attribute to word "Snout" or with a little variance of capital letters causes shader not to compile. If the attribute is named in full capitals such as "SNOUT" the shader can compile. ![image.png](https://archive.blender.org/developer/F9500027/image.png) [vertexColorAttributeNamingIssue.blend](https://archive.blender.org/developer/F9500030/vertexColorAttributeNamingIssue.blend) **Exact steps for others to reproduce the error** 1. Use the default cube. 2. Create a new vertex color attribute for it. 3. Add some colors through vertex painting. 4. Name the Attribute as "Snout" or snout. 5. Create a material (use emissive) and plug the created vertex color attribute into the color input. 6. Shader won't compile 7. Rename vertex color "Snout" attribute to something else. 8. Update material attribute input name to match the renamed one. 9. Shader compiles again.
Author

Added subscriber: @TMug

Added subscriber: @TMug
Teemu changed title from Naming Vertex Color attribute as "snout, Snout" or causes shader error. to Naming Vertex Color attribute as "snout, Snout" causes shader error. 2020-12-10 12:42:10 +01:00

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This seems to cause an invalid name to be generated internally:

ERROR (gpu.shader): MAMaterial VertShader:
      |
  114 | DEFINE_ATTR(vec4, aowS4__haaaa);
      |
      | Error:  C7528: OpenGL reserves names containing '__'
This seems to cause an invalid name to be generated internally: ``` ERROR (gpu.shader): MAMaterial VertShader: | 114 | DEFINE_ATTR(vec4, aowS4__haaaa); | | Error: C7528: OpenGL reserves names containing '__' ```

This issue was referenced by 2db277092d

This issue was referenced by 2db277092d8322abc3851ba18368ac370e2dd0dd

This issue was referenced by 6c777ed76b

This issue was referenced by 6c777ed76b3d4342d50f6f87f24f758473816a60

This issue was referenced by ffb6648a97

This issue was referenced by ffb6648a970e72a749c7de3c5645450ba7d8d858
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2020-12-18 10:00:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83625
No description provided.