source/blender/gpu/intern/gpu_vertex_format.c
@@ -264,13 +264,12 @@ int GPU_vertformat_attr_id_get(const GPUVertFormat *format, const char *name)
 /* Encode 8 original bytes into 11 safe bytes. */
 static void safe_bytes(char out[11], const char data[8])
 {
-  char safe_chars[63] = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_";
+  char safe_chars[] = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
 
   uint64_t in = *(uint64_t *)data;
   for (int i = 0; i < 11; i++) {
-    /* Encoding in base63 */
-    out[i] = safe_chars[in % 63lu];
-    in /= 63lu;
+    out[i] = safe_chars[in % 62lu];
+    in /= 62lu;
   }
 }
 
